--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch app.js"
+    "test": "NODE_ENV=test jest --verbose --silent --detectOpenHandles",
+    "dev": "NODE_ENV=development node --watch app.js",
+    "start": "NODE_ENV=production node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "moongose": "^1.0.0",
     "nodemailer": "^6.9.14"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
