--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --verbose --silent --detectOpenHandles",
+    "test": "NODE_ENV=test jest --verbose --detectOpenHandles",
     "dev": "NODE_ENV=development node --watch app.js",
     "start": "NODE_ENV=production node app.js"
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "express-validator": "^7.2.0",
