--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,41 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.1",
     "@mui/x-data-grid": "^7.24.1",
     "@mui/x-date-pickers": "^7.25.0",
+    "@react-three/drei": "^9.56.7",
+    "@react-three/fiber": "^8.13.7",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.18.1",
+    "lucide-react": "^0.517.0",
+    "motion": "^12.18.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.26.1",
-    "zustand": "^5.0.0-rc.2"
+    "three": "^0.152.2",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.8.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.0"
   }
 }
