--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "moongose": "^1.0.0",
+    "mongoose": "^1.0.0",
     "nodemailer": "^6.9.14"
   },
   "devDependencies": {
