--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "16.4.5",
@@ -20,9 +21,10 @@
     "express": "4.19.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^1.0.0",
-    "nodemailer": "^6.9.14"
+    "mongoose": "^8.17.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^6.9.14",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
