--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "@mui/x-date-pickers": "^7.25.0",
     "@react-three/drei": "^9.56.7",
     "@react-three/fiber": "^8.13.7",
+    "apexcharts": "^5.3.4",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.517.0",
     "motion": "^12.18.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
